[package]
name = "regex-lexer"
version = "0.1.0" # remember to change html_root_url
authors = ["Gwenhwyfar Hartshaw <ghartshaw@gmail.com>"]
edition = "2018"
description = "A regex-based lexer (tokenizer)"
readme = "README.md"
homepage = "https://github.com/krsnik02/regex-lexer/"
repository = "https://github.com/krsnik02/regex-lexer/"
license = "MIT OR Apache-2.0"
keywords = ["lexer", "tokenizer", "regex", "parsing"]
categories = ["parsing"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"